Prevent query views from wrapping

--- a/less/components/querybuilder.less
+++ b/less/components/querybuilder.less
@@ -275,10 +275,12 @@ div.column-container {
     .qb-attribute {
         // font-style: italic;
         // padding-left: 19px;
+        white-space: nowrap;
     }
     .qb-class {
         font-weight: 500;
         color: @query-browser-class;
+        white-space: nowrap;
     }
     .light {
         color: #898989;
@@ -361,6 +363,7 @@ div.column-container {
     .qb-attribute {
         // font-style: italic;
         // padding-left: 19px;
+        white-space: nowrap;
     }
     .qb-class {
         font-weight: 500;
@@ -387,6 +390,7 @@ div.column-container {
 
 .qb-label {
     padding-left: 0px;
+    white-space: nowrap;
 }
 
 .icon-spacer::before,
